updated picture overlapping issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ img {
 
 .profile-img {
   justify-self: center;
-  width: 400px;
+  width: 300px;
   height: 400px;
   background: linear-gradient(#a394e9, #9198e536);
   border-radius: 2rem;
